--- a/event.css
+++ b/event.css
@@ -669,7 +669,7 @@ body {
     }
   
     .four img {
-      height: 900px;
+      height: auto;
       width: 100%;
     }
   
@@ -704,9 +704,9 @@ body {
     }
   
     .four{
-      height:800px;
+      height:auto;
       width: 100%;
-      margin-top:0;
+     
     }
     .four{
         display:flex;
