--- a/event.css
+++ b/event.css
@@ -67,7 +67,7 @@ button{
 
 
 .two{
-    margin-left:12%;
+    margin-left:3%;
     
     
 }
@@ -232,7 +232,7 @@ h2{
     font-family:Arial, Helvetica, sans-serif;
     padding-left:20px;
     text-decoration:underline;
-   margin-top:0;
+    margin-top:0;
 
  }
  .para2 {
@@ -240,8 +240,8 @@ h2{
       grid-template-columns: auto auto auto;
       column-gap:5px;
       row-gap:5px;
-      padding-left:170px;
-      padding-top:0;
+      padding-left:110px;
+      padding-top:40px;
       
 
  }
@@ -251,20 +251,10 @@ h2{
     padding-bottom:20%;
     margin-top:0;
     padding-left:30px;
-
+   
  }
 
-.para2 h5{
-    font-size:30px;
-    font-family:'Times New Roman', Times, serif;
-    padding-left:60px;
-    margin-top:0;
-    padding-top:0;
-    padding-bottom:0;
-    margin-bottom:0;
-    
-}
- 
+
 @keyframes move{
     from{
         transform:translateX(0);
@@ -291,7 +281,7 @@ h2{
     transition:transform 0.3s;
 }
 .image:hover{
-    transform:scale(1.5);
+    transform:scale(1.1);
 }
  .eleven{
     display:grid;
@@ -303,13 +293,14 @@ h2{
     
  }
  .eleven img{
-    border-radius: 50%;
+    border-radius:50%;
     margin-top: 30px;
  }
  .para3{
     margin-top:0;
     background-image:linear-gradient(white,lightblue,white) ;
     height:800px;
+    width:100%;
  }
  
  .para4 h4{
@@ -346,10 +337,12 @@ h2{
  .para4{
     background-image:linear-gradient(white,white,lightblue,white);
     height:570px;
+    width:100%;
  }
  .lasty{
     background-image:linear-gradient(white,rgb(113, 166, 183),white);
     height:510px;
+    width:100%;
    
     
    
@@ -382,32 +375,40 @@ h2{
     font-family: serif;
     font-size: 20px;
     font-weight: 200;
-    padding-bottom:20px;
+    padding-bottom:0px;
     margin-left:0;
     padding-left:0;
+    margin-top:50px;
+    padding-top:10px;
 }
 .last2 h5{
     font-size:25px;
-    margin-top:37%;
+    margin-top:0;
+    margin-right:50%;
 }
 .last3 h5{
     font-size:25px;
-   margin-right:30%;
-    padding-left:30px;
-    margin-top:33%;
+    margin-right:26%;
+    padding-left:60px;
+    margin-top:0%;
 }
 .last3 h4{
     font-size:20px;
     font-family: serif;
     color:rgb(6, 6, 77);
     font-weight:200;
-    margin-right:35%;
+    margin-right:40%;
+    padding-top:10px;
+    padding-bottom: 10px;
 }
 .last4 h3{
     color:rgb(4, 4, 66);
     padding-top:20px;
     font-weight:200;
     font-size:20px;
+    margin-top:20px;
+    margin-right:57%;
+   
 }
 .lasty{
     display:grid;
@@ -442,7 +443,9 @@ h2{
 }
 .last4 h5{
     font-size:25px;
-    margin-top:25%;
+    margin-top:0%;
+    margin-right:7%;
+   
 }
 .about1{
     background-image: linear-gradient(white,lightblue,white,white);
@@ -650,5 +653,239 @@ h2{
     margin-left:20px;
     margin-top:0;
 }
+.navbar a.icon{
+    display:none;
+}
+   
+   
+@media screen and (max-width: 768px) {
+        .navbar.responsive{
+            position:relative;
+        }
+        
+        .navbar.responsive .icon{
+            position:absolute;
+            right:0;
+            top:0;
+        }
+        .navbar a.icon{
+            display:block;
+            float:right;
+        }
+          .navbar ul,.navbarli{
+            display:none;
+        }
+        .navbar.responsive ul{
+            
+            display:block;
+            width:100%;
+        }
+        .navbar.responsive li{
+            display:block;
+            width:100%;
+        }
+        .navbar.responsive a{
+            float:none;
+            display:block;
+            text-align:left;
+        }
+        .two,.three{
+            display:none;
+            
+        }
+        .four p{
+              margin-top:42px;
+              font-size:15px;
+              padding-top:2px;
+              padding-bottom:2px;
+        }        
+        .sponsor1 img{
+            width:60px;
+            height:60px;
+            margin-top:90px;
+        }  
+        .sponsor1 h2{
+            font-size:25px;
+        }
+        .sponsor2 h3{
+            font-size:27px;
+            margin-left:130px;
+        }
+        .sponsor2 h5{
+            font-size:17px;
+        }
 
+.sponsor2 h6{
+    font-size:20px;
+}
 
+.sponsor3 img{
+    width:110px;
+    height:110px;
+    margin-left:6px;
+    column-gap: 0;
+    row-gap: 0;
+}
+
+.last5 h3,h4{
+    font-size:15px;
+}
+.four img{
+    height:700px;
+    width:auto;
+}
+.five img{
+    width:50px;
+    height:50px;
+}
+.five h2{
+    font-size:25px;
+}       
+
+.six h3{
+    font-size:24px;
+    
+}
+
+.seven h5{
+    font-size:20px;
+}
+
+.nine img{
+    width:150px;
+    height:180px;
+}
+.nine h6{
+    font-size:15px;
+    position:sticky;
+}
+.ten img{
+    width:150px;
+    height:180px;
+}
+.ten h6{
+    font-size:15px;
+    margin-left:0;
+}
+.button1{
+   display:none;
+    
+}
+.para2 img{
+    width:120px;
+    height:120px;
+    
+   padding-left:0;
+   padding-top:40px;
+   padding-right:10px;
+   
+}
+
+.para1 h2{
+    font-size:23px;
+}
+.para2 h5{
+    display:none;
+   
+}
+
+.eight h6{
+    display:none;
+}
+.eight button{
+    margin-top:150px;
+    padding-top:2px;
+}
+
+.last4 h5{
+   font-size:17px;
+}
+.last4 h3{
+    font-size:13px;
+}
+.last1 img{
+    display:none;
+}
+.last2 h5,.last3 h5{
+    font-size:17px;
+}
+.last2 h5{
+    padding-right:9px;
+   
+}
+.last2 a{
+    margin-top:20px;
+  font-size:15px;
+  
+}
+.last3 h4{
+    font-size:15px;
+}
+.last4 h3{
+    font-size:15px;
+}
+.eleven img{
+    width:120px;
+    height:120px;
+    margin-left:0;
+}
+
+.name h3{
+    font-size:17px;
+}
+.name2 h2{
+    font-size:15px;
+    margin-left:0;
+    padding-top:10px;
+    padding-left:28px;
+}
+
+.about6 h5{
+    font-size:25px;
+}
+.about6 h4{
+    font-size:20px;
+}
+#image{
+    width:auto;
+    height:300px;
+}
+.container ol,li{
+    font-size:17px;
+    padding-left:0;
+    padding-right:0;
+}
+
+.topic h3{
+    font-size:25px;
+}
+.about2 span{
+    font-size:20px;
+}
+.about1 h3{
+    margin-left:50px;
+    font-size:24px;
+}
+.speaker img{
+    width:120px;
+    height:120px;
+    margin-left:0;
+}
+.speaker h3{
+    font-size:18px;
+}
+
+.speaker h5{
+    font-size:15px;
+}
+.sp1 h6{
+    font-size:20px;
+}
+.sp1 h3{
+    font-size:26px;
+    margin-left:90px;
+}
+.sp1 img{
+    margin-top:90px;
+}
+}
