--- a/event.css
+++ b/event.css
@@ -659,35 +659,10 @@ h2{
    
    
 @media screen and (max-width: 768px) {
-        .navbar.responsive{
-            position:relative;
-        }
-        
-        .navbar.responsive .icon{
-            position:absolute;
-            right:0;
-            top:0;
-        }
-        .navbar a.icon{
-            display:block;
-            float:right;
-        }
-          .navbar ul,.navbarli{
-            display:none;
-        }
-        .navbar.responsive ul{
-            
-            display:block;
-            width:100%;
-        }
-        .navbar.responsive li{
-            display:block;
-            width:100%;
-        }
-        .navbar.responsive a{
-            float:none;
-            display:block;
-            text-align:left;
+        .navbar li,a{
+            font-size:15px;
+          padding-right:5px;
+            margin-left:0;
         }
         .two,.three{
             display:none;
@@ -698,6 +673,7 @@ h2{
               font-size:15px;
               padding-top:2px;
               padding-bottom:2px;
+              width:auto;
         }        
         .sponsor1 img{
             width:60px;
@@ -842,6 +818,9 @@ h2{
 
 .about6 h5{
     font-size:25px;
+}
+.about1 img{
+    margin-top:80px;
 }
 .about6 h4{
     font-size:20px;
