--- a/event.css
+++ b/event.css
@@ -1,12 +1,15 @@
 
-.navbar,li,a{
-    text-decoration:none;
+body nav ul li{
+    
     overflow: hidden;
     font-size:20px;
     font-family:cursive;
     font-weight: 800;  
 }
-.navbar{
+body nav ul li a{
+    text-decoration:none;
+}
+body nav{
     background-color:white;
     background-size:cover;
     position:fixed;
@@ -22,19 +25,28 @@ h1{
     margin-top:10px;
     text-shadow: 2px 2px 4px rgb(157, 157, 234);
     margin-bottom:0;
+    margin-left:60px;
+    position:fixed;
 }
-
+.onetoone{
+    display:flex;
+}
 .one{
     display:flex;
+    margin-top:4px;
+}
+.one img{
+    position:fixed;
 }
 
-.navbar ul,li{
+body nav ul,li{
     display:flex;
-    padding-right:60px;
-    margin-top:7px;
-    float:right;
-    margin-left:30px;
-    padding-left:20px;
+    padding-right:10px;
+    margin-top:0px;
+    float:left;
+    padding-left:10px;
+    padding-bottom:3px;
+    margin-left:140px;
 
 }
 
@@ -51,7 +63,6 @@ button{
     color:rgb(251, 251, 253);
     background:rgb(50, 153, 200);
     font-size:20px;
-    margin-top:7px;
     font-family:cursive;
     padding-left:11px;
     padding-right:11px;
@@ -61,22 +72,17 @@ button{
     cursor:pointer;
     transition-duration :0.4s;
     font-weight: 400;
-    
-    
-}
-
-
-.two{
-    margin-left:3%;
-    
-    
 }
 .three{
-    margin-left:45px;
-    
+    margin-left:20%;
+    margin-top:0px;
 
-    
 }
+
+.two{
+    margin-left:25%;
+}
+
 button:active{
     background-color: azure;
     color:darkblue;
@@ -94,7 +100,7 @@ p{
     font-size:20px;
     z-index:1000;
     border-bottom: 1px solid rgba(241, 176, 11, 0.867);
-   
+    width:auto;
 }
 .four{
     display:flex;
@@ -104,8 +110,8 @@ p{
 }
 .four p{
     width:100%;
-    margin-top:54px;
-    position:fixed;
+    margin-top:46px;
+   position:fixed;
 }
 .four{
     width:100%;
@@ -119,6 +125,7 @@ p{
 .background{
     background-image:linear-gradient(white,white,lightblue);
     height:620px;
+    width:auto;
 }
 .background h3{
     top:0;
@@ -171,6 +178,7 @@ h2{
 .nine{
     background-image:linear-gradient(white,white,lightblue);
     height:400px;
+    width:auto;
 
 }
 .nine img{
@@ -199,6 +207,7 @@ h2{
  .ten{
     background-image:linear-gradient(lightblue,white,white,lightblue);
     height:400px;
+    width:auto;
 
 }
 .ten img{
@@ -300,7 +309,7 @@ h2{
     margin-top:0;
     background-image:linear-gradient(white,lightblue,white) ;
     height:800px;
-    width:100%;
+    width:auto;
  }
  
  .para4 h4{
@@ -337,12 +346,12 @@ h2{
  .para4{
     background-image:linear-gradient(white,white,lightblue,white);
     height:570px;
-    width:100%;
+    width:auto;
  }
  .lasty{
     background-image:linear-gradient(white,rgb(113, 166, 183),white);
     height:510px;
-    width:100%;
+    width:auto;
    
     
    
@@ -430,7 +439,7 @@ h2{
 }
 .last5{
     background-color:rgb(5, 5, 91);
-    width:100%;
+    width:auto;
     height:90px;
     
 }
@@ -661,20 +670,14 @@ h2{
 @media screen and (max-width: 768px) {
         .navbar li,a{
             font-size:15px;
-          padding-right:5px;
+           padding-right:5px;
             margin-left:0;
         }
         .two,.three{
             display:none;
             
         }
-        .four p{
-              margin-top:42px;
-              font-size:15px;
-              padding-top:2px;
-              padding-bottom:2px;
-              width:auto;
-        }        
+        
         .sponsor1 img{
             width:60px;
             height:60px;
