--- a/event.css
+++ b/event.css
@@ -28,14 +28,14 @@ h1{
     margin-left:60px;
     position:fixed;
 }
-.onetoone{
+.onto{
     display:flex;
 }
-.one{
+header{
     display:flex;
     margin-top:4px;
 }
-.one img{
+header img{
     position:fixed;
 }
 
@@ -110,7 +110,7 @@ p{
 }
 .four p{
     width:100%;
-    margin-top:46px;
+    margin-top:64px;
    position:fixed;
 }
 .four{
@@ -407,8 +407,9 @@ h2{
     color:rgb(6, 6, 77);
     font-weight:200;
     margin-right:40%;
-    padding-top:10px;
+    padding-top:35px;
     padding-bottom: 10px;
+    
 }
 .last4 h3{
     color:rgb(4, 4, 66);
@@ -430,24 +431,24 @@ h2{
 .last1,.last2,.last2{
     margin-top:0;
 }
-.last5 h3,h4{
+footer h3,h4{
     font-weight:200;
     
     text-align:center;
     color:white;
     font-size:20px;
 }
-.last5{
+footer {
     background-color:rgb(5, 5, 91);
     width:auto;
     height:90px;
     
 }
-.last5 h3{
+footer h3{
     padding-top:10px;
    
 }
-.last5 h4{
+footer h4{
     margin-top:2px;
 }
 .last4 h5{
@@ -610,9 +611,10 @@ h2{
 .sp1{
     background-image: linear-gradient(white,lightblue,white,white);
     height:auto;
+    width:auto;
 }
 .sp1 img{
-    margin-top:6%;
+    margin-top:7%;
     padding-left:37%;
     mask:linear-gradient(white,lightblue,transparent);
 }
