--- a/event.css
+++ b/event.css
@@ -716,6 +716,7 @@ footer h4{
               row-gap: 0;
  }  
        body footer h3,h4{ 
+        margin-top:0;
           margin-bottom:10px;
           font-size:14px;
 }
@@ -729,6 +730,7 @@ footer h4{
    
  }
  .sponsor{
+    background-color: linear-gradient(white,lightblue);
     width:100%;
     height:100%;
  }
