--- a/event.css
+++ b/event.css
@@ -671,6 +671,9 @@ footer h4{
    
    
 @media screen and (max-width: 768px) {
+    body {
+        background-color: linear-gradient(white,lightblue);
+    }
         body header h1{
             font-size:15px;
             margin-left:10px;
@@ -720,7 +723,7 @@ footer h4{
           margin-bottom:10px;
           font-size:14px;
 }
-.onto{
+.two,.three{
     display:none;
 }
  body nav ul li {
