--- a/event.css
+++ b/event.css
@@ -677,6 +677,9 @@ footer h4{
             width:20px;
             height:20px;
         }
+        .four{
+            width:auto;
+        }
         .four p{
             margin-top:45px;
             width:auto;
