--- a/event.css
+++ b/event.css
@@ -1,14 +1,13 @@
 
-body nav ul li{
-    
+.navbar li,ul,a{
+    position:fixed;
     overflow: hidden;
     font-size:20px;
     font-family:cursive;
-    font-weight: 800;  
+    font-weight: 800; 
+    text-decoration:none; 
 }
-body nav ul li a{
-    text-decoration:none;
-}
+
 body nav{
     background-color:white;
     background-size:cover;
@@ -16,7 +15,7 @@ body nav{
     z-index:1000;
     top:0;
     width: 100%;
-    
+    height:80px; 
 }
 
 h1{
@@ -30,6 +29,7 @@ h1{
 }
 .onto{
     display:flex;
+    position:fixed;
 }
 header{
     display:flex;
@@ -39,12 +39,12 @@ header img{
     position:fixed;
 }
 
-body nav ul,li{
+.navbar ul,li{
     display:flex;
-    padding-right:10px;
+    padding-right:40px;
     margin-top:0px;
     float:left;
-    padding-left:10px;
+    padding-left:20px;
     padding-bottom:3px;
     margin-left:140px;
 
@@ -80,7 +80,8 @@ button{
 }
 
 .two{
-    margin-left:25%;
+    margin-left:500%;
+    padding-left:200%;
 }
 
 button:active{
@@ -666,9 +667,7 @@ footer h4{
    
    
 @media screen and (max-width: 768px) {
-    body {
-        background-color: linear-gradient(white,lightblue);
-    }
+   
         body header h1{
             font-size:15px;
             margin-left:10px;
@@ -676,6 +675,9 @@ footer h4{
         body header img{
             width:20px;
             height:20px;
+        }
+        body nav {
+            float:none;
         }
 
         
@@ -773,10 +775,11 @@ footer h4{
 .about2 span{
     font-size:20px;
 }
-.container ol li{
-    font-size:12px;
+.container ol,li{
+    font-size:14px;
     margin-left:0;
     padding-left:0;
+    padding-right:0;
     width:50%;
 }
 .container{
